welcome.lessons.welcome.variables.Variables.scala.error
Variables:8: error: not found: value prendreBiscuit
prendreBiscuit();
^Variables:10: error: not found: value porterBiscuit
  porterBiscuit();
  ^Variables:11: error: not found: value reculer
  reculer();
  ^